--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1",
+    "lodash.template": "^4.5.0",
     "rename": "^1.0.4"
   }
 }
